test/testdata/classes/methods/field_shadows_method.lox
class Foo {
  init(bar) {
    this.bar = bar;
  }

  bar() {
    return "bar method";
  }
}

var foo = Foo("bar field");
print foo.bar; // prints: bar field
foo.bar(); // error: 'string' object is not callable
